--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
   "scripts": {
     "start": "node app.js",
     "server": "nodemon app.js",
-    "frontend-install": "npm install --prefix frontend",
-    "frontend": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run frontend\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+    "dev": "npm run server",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install "
   },
   "repository": {
     "type": "git",
