--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "@babel/core": "^7.11.4",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
-    "aws-sdk": "^2.745.0",
+    "aws-sdk": "^2.868.0",
     "axios": "^0.20.0",
     "babel-loader": "^8.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "compress-images": "^1.9.8",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -52,10 +53,14 @@
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "typescript": "^4.2.3",
     "uuid": "^8.3.0",
     "validator": "^13.1.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "@types/node": "^14.14.35",
+    "@types/validator": "^13.1.3",
+    "nodemon": "^2.0.4",
+    "ts-node": "^9.1.1"
   }
 }
