--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "borrow_me",
   "version": "1.0.0",
   "description": "MERN Project BorrowMe",
-  "main": "app.js",
+  "main": "app.ts",
   "scripts": {
-    "start": "node app.js",
-    "server": "nodemon app.js",
+    "start": "node app.ts",
+    "server": "nodemon app.ts",
     "dev": "npm run server",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install "
   },
@@ -39,7 +39,7 @@
     "form-data": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
-    "mongoose": "^5.10.2",
+    "mongoose": "^5.12.1",
     "multer": "^1.4.2",
     "node": "^14.8.0",
     "node-sass": "^4.14.1",
@@ -53,14 +53,18 @@
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "typescript": "^4.2.3",
     "uuid": "^8.3.0",
     "validator": "^13.1.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.35",
+    "@types/passport-jwt": "^3.0.5",
+    "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.3",
     "nodemon": "^2.0.4",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3"
   }
 }
