--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "esModuleInterop": true,
-    "target": "es6",
+    "lib": ["ES6", "ES5"],
     "noImplicitAny": true,
     "moduleResolution": "node",
     "sourceMap": true,
