--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node app.ts",
     "server": "nodemon app.ts",
     "dev": "npm run server",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install "
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && tsc"
   },
   "repository": {
     "type": "git",
