--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node app.ts",
     "server": "nodemon app.ts",
     "dev": "npm run server",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && tsc"
+    "build": "tsc",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && npm run build"
   },
   "repository": {
     "type": "git",
