--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MERN Project BorrowMe",
   "main": "app.ts",
   "scripts": {
-    "start": "node app.ts",
+    "start": "ts-node app.ts",
     "server": "nodemon app.ts",
     "dev": "npm run server",
     "build": "tsc --project tsconfig.json",
