--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "url": "https://github.com/amahalwy/BorrowMe/issues"
   },
   "homepage": "https://github.com/amahalwy/BorrowMe#readme",
+  "engines": {
+    "node": "^14.8.0"
+  },
   "dependencies": {
     "@babel/core": "^7.11.4",
     "@babel/preset-env": "^7.11.0",
@@ -53,6 +56,7 @@
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "typescript": "^4.2.3",
     "uuid": "^8.3.0",
     "validator": "^13.1.1"
   },
