Trial push for heroku

--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "MERN Project BorrowMe",
   "main": "app.ts",
   "scripts": {
-    "start": "ts-node app.ts",
+    "start": "node app.ts",
     "server": "nodemon -x ts-node app.ts",
     "dev": "npm run server",
-    "build": "tsc --project tsconfig.json",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && npm run build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && tsc"
   },
   "repository": {
     "type": "git",
