--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MERN Project BorrowMe",
   "main": "app.ts",
   "scripts": {
-    "start": "node app.ts",
+    "start": "ts-node app.ts",
     "server": "nodemon -x ts-node app.ts",
     "dev": "npm run server",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && tsc"
@@ -60,9 +60,12 @@
     "validator": "^13.1.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.35",
+    "@types/passport": "^1.0.6",
     "@types/passport-jwt": "^3.0.5",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.3",
