--- a/package.json
+++ b/package.json
@@ -55,11 +55,8 @@
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "typescript": "^4.2.3",
     "uuid": "^8.3.0",
-    "validator": "^13.1.1"
-  },
-  "devDependencies": {
+    "validator": "^13.1.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
