--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MERN Project BorrowMe",
   "main": "app.ts",
   "scripts": {
-    "start": "ts-node app.ts",
+    "start": "node app.ts",
     "server": "nodemon -x ts-node app.ts",
     "dev": "npm run server",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && tsc"
