--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "MERN Project BorrowMe",
   "main": "app.ts",
   "scripts": {
-    "start": "node app.ts",
-    "server": "nodemon -x ts-node app.ts",
+    "build": "rimraf dist && tsc",
+    "preserve": "npm run build",
+    "serve": "cross-env NODE_ENV=development concurrently \"tsc --watch\" \"nodemon -q dist/app.js\"",
+    "prestart": "npm run build",
+    "start": "cross-env NODE_ENV=production node dist/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "node --loader ts-node/esm app.ts",
     "dev": "npm run server",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && tsc"
   },
@@ -30,6 +35,15 @@
     "@babel/core": "^7.11.4",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.11",
+    "@types/multer": "^1.4.5",
+    "@types/node": "^14.14.35",
+    "@types/passport": "^1.0.6",
+    "@types/passport-jwt": "^3.0.5",
+    "@types/uuid": "^8.3.0",
+    "@types/validator": "^13.1.3",
     "aws-sdk": "^2.868.0",
     "axios": "^0.21.1",
     "babel-loader": "^8.1.0",
@@ -46,6 +60,7 @@
     "multer": "^1.4.2",
     "node": "^14.8.0",
     "node-sass": "^4.14.1",
+    "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "react": "^16.13.1",
@@ -55,19 +70,10 @@
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "uuid": "^8.3.0",
-    "validator": "^13.1.1",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.10",
-    "@types/express": "^4.17.11",
-    "@types/multer": "^1.4.5",
-    "@types/node": "^14.14.35",
-    "@types/passport": "^1.0.6",
-    "@types/passport-jwt": "^3.0.5",
-    "@types/uuid": "^8.3.0",
-    "@types/validator": "^13.1.3",
-    "nodemon": "^2.0.4",
+    "rimraf": "^2.7.1",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "uuid": "^8.3.0",
+    "validator": "^13.1.1"
   }
 }
