--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "rimraf dist && tsc",
     "start": "NODE_ENV=production NODE_OPTIONS=--max-old-space-size=8192 node dist/app.js",
     "serve": "cross-env NODE_ENV=development concurrently \"tsc --watch\" \"nodemon -q dist/app.js\"",
-    "server": "node --loader ts-node/esm app.ts",
+    "server": "ts-node app.ts",
     "dev": "npm run server",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && tsc"
   },
